@@ -1,3 +1,7 @@
+2011-12-22  Franz Holzinger  <franz@ttproducts.de>
+
+	* bug fix: No writing of the debug output if the IP address does not fit
+
 2011-12-03  Franz Holzinger  <franz@ttproducts.de>
 
 	* bug fix: Use fh_debug also if the ip address does not match. No debug output shall be shown in the FE.
